Fix the problem that Japanese is not displayed on Firefox OS.

--- a/scss/01_Base/00_HTML_BODY.scss
+++ b/scss/01_Base/00_HTML_BODY.scss
@@ -49,10 +49,18 @@
         /* //_}@ie5win */ 
     /* //_}^+mobileOnly */
 
+/*  Phone-
+--------------------------------------------------------------------------------------*/
+@include media(smallphone) {
+    body {
+        font-size : 0.8125em;
+    }
+}
+
 /*  Watch
 --------------------------------------------------------------------------------------*/
 @include media(watch) {
     body {
-        font-size : 0.825em;
+        font-size : 0.75em;
     }
 }
