--- a/scss/01_Base/01_FontFamily.scss
+++ b/scss/01_Base/01_FontFamily.scss
@@ -2,19 +2,22 @@
 --------------------------------------------------------------------------------------*/    
 /* https://tokunagakazuya.tk/vk3l */
 
+// https://terkel.jp/archives/2016/05/system-fonts-on-website/
+// ウェブサイトでシステムフォント
+
 /* //_{@modern,@ie9
  * http://loconet.web2.jp/blog/archives/2007/02/cssfontfamily.html
  */
         body, textarea, input {
             font-family :
-                -apple-system, BlinkMacSystemFont, Avenir, "Open Sans",
+                -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Open Sans",
                 "Helvetica Neue", Helvetica, Arial, Verdana,
-                Roboto,
+                /* Roboto, */
                 "UD Digi Kyokasho NP-R",
-                "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック" , "Yu Gothic" , "游ゴシック体" , YuGothic,
                 "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
                 "Meiryo UI", "メイリオ", Meiryo,
-                "M+ 1p", "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
+                "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック" , "Yu Gothic" , "游ゴシック体" , YuGothic,
+                "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
         }
 /* //_}@modern,@ie9 */
 
@@ -22,16 +25,17 @@
  * Firefox OS2.2(シミュレータ) で Roboto がいると日本語を正しく表示できない... 2.1-は問題無し
  * http://outcloud.blogspot.jp/2016/03/firefox-os22-dislike-Roboto.html
  */
-    @-moz-document url-prefix() {
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
         body, textarea, input {
             font-family :
-                -apple-system, BlinkMacSystemFont, Avenir, "Open Sans",
+                -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Open Sans",
                 "Helvetica Neue", Helvetica, Arial, Verdana,
-                "UD Digi Kyokasho NK-R",
-                "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック" , "Yu Gothic" , "游ゴシック体" , YuGothic,
+                Roboto,
+                "UD Digi Kyokasho NP-R",
                 "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
                 "Meiryo UI", "メイリオ", Meiryo,
-                "M+ 1p", "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
+                "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック" , "Yu Gothic" , "游ゴシック体" , YuGothic,
+                "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
         }
     }
 /* //_}@modern */
